www/css/style.css
.margin-top{
    margin-top:5px !important;
}

.padding{
    padding:10px !important;
}



.desire-img img {
    width: 100%;
}

.desire-list-item h1 {
    font-size: 20px;
    color: #FF6C17;
    font-weight: normal;
}

.desire-detail-image {
    padding-top: 25px;
}

.desire-detail-title {
    padding-top: 45px;
    font-size: 30px;
    line-height: 25px;
}

.desire-detail-title span{

}

.desire-detail-box {
    margin-top: 20px;
    background-color: #e8e8e8;
    padding-bottom: 10px;
    padding-top: 10px;
}

.desire-detail h4 {
    color: #FF6C17;
    margin-left: 20px;
    margin-right: 20px;
}

.desire-detail-box p {
    margin-left: 20px;
    margin-right: 20px;
    padding-top: 5px;
}

.desire-detail-price-box {
    margin-top: 25px;
    margin-left: 25%;
    margin-right: 25%;
    background-color: #e8e8e8;
    padding-bottom: 10px;
    padding-top: 10px;
}

.desire-detail-price-box h4 {
    color: #FF6C17;
    text-align: center;
}

.desire-detail-price-box p {
    padding-top: 5px;
    text-align: center;
}

.desire-description {
    font-size: 90%;
}

.item-complex .item-content, .item-radio .item-content {
    padding: 10px;
}

.desire-price {
    font-size: 24px;
    font-weight: normal;
    color: #555;
    padding-top: 40px;
    width: 50px;
}

[nav-bar-transition="ios"] [nav-bar="active"] .bar, [nav-bar-transition="ios"] [nav-bar="entering"] .bar {
    background: #FF6C17;
}

.bar.bar-stable .title {
    color: #fff;
}

.bar-stable .button.button-clear {
    color: #fff;
}

.text-align-right{
    text-align: right;
}

.desire-info .col {
    color: #888;
    font-size: 14px;
}

.rating-element {
    margin-right: 1px;
}

.user-menu-details span {
    padding-top: 27px;
    display: inline-block;
    color: #fff;
    font-size: 20px;
}

.user-menu-details {
    background: #666;
    margin-bottom:20px;
}

.menu-left {
    background: #444;
}

ion-side-menu .item, ion-side-menu .item-content {
    background: #444 !important;
    color: #f7f7f7;
    text-transform: uppercase;
    font-size: 14px;
    border: none;
    padding-left:20px;
}

